Modified build_database
Included the owner examples from api
